# Wetfloor-Leaderboard

./: .gitignore  index.html
.github/workflows/: node.js.yml
assets/: index-7d5fyMvy.js  index-BDBABRb6.css  index-BJpxPFHz.js  index-BNSiNLvS.css  index-BP1sFDsq.js  index-BZLqAvIh.js  index-BdB42lBV.js  index-Bmp9zUk0.js  index-CCGhz5Nc.js  index-CORjxGXG.js  index-D5KeUU_E.js  index-DD2T6y0y.css  index-DHiGgIJ8.js  index-DJyo2cBv.js  index-DRHRaHfb.js  index-DW6Mu-jw.js  index-Do3dkCYZ.js  index-DrPxNWL5.js  index-DwjA7fDP.css  index-N50NlDdL.css  index-lKCMG8Bn.css  index-tDyOXHFW.css
wetfloor-backend/: Cargo.toml  diesel.toml
wetfloor-backend/migrations/2024-06-16-013237_create_player/: down.sql  up.sql
wetfloor-backend/migrations/2024-06-16-084622_create_posts/: down.sql  up.sql
wetfloor-backend/migrations/2024-06-19-120255_create_players/: down.sql  up.sql
wetfloor-backend/migrations/2024-06-19-122817_create_matches/: down.sql  up.sql
wetfloor-backend/migrations/2024-06-19-132642_alter_matches/: down.sql  up.sql
wetfloor-backend/migrations/2024-06-20-124855_add_matches_points/: down.sql  up.sql
wetfloor-backend/migrations/2024-06-29-135841_player/: down.sql  up.sql
wetfloor-backend/src/: lib.rs  main.rs  models.rs  schema.rs
wetfloor-fastapi-backend/: create_db.py  crud.py  database.py  elo.py  main.py  models.py  requirements.txt
wetfloor-fastapi-backend/fastApiProject/: crud.py  database.py  main.py  schemas.py
wetfloor-fastapi-backend/test/: __init__.py
wetfloor-frontend/: index.html  package-lock.json  package.json  vite.config.js
(+7 files in other folders)
