[package]
name = "wetfloor-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.0", features = ["mysql", "r2d2", "chrono"] }
dotenv_codegen = "0.15.0"
dotenvy = "0.15"
serde = { version = "1.0.203", features = ["derive"] }
